objects/Animal__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Level__c</fullName>
        <label>Activity Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adoption_Date__c</fullName>
        <label>Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate__c) ) , IF( DATE( 2000 , MONTH( Birthdate__c) , DAY( Birthdate__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), YEAR (Today()) - YEAR ( Birthdate__c), YEAR (Today()) - YEAR ( Birthdate__c) -1 ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_Bitten_Someone__c</fullName>
        <label>Animal Bitten Someone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Breed__c</fullName>
        <label>Animal Breed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Normally_Live_Sleep__c</fullName>
        <label>Animal Normally Live/Sleep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Status__c</fullName>
        <label>Animal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Claim of Ownership</fullName>
                </value>
                <value>
                    <fullName>In Care</fullName>
                </value>
                <value>
                    <fullName>No Further Contact</fullName>
                </value>
                <value>
                    <fullName>Returned to Owner</fullName>
                </value>
                <value>
                    <fullName>Surrendered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bird</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Duck</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Goose</fullName>
                </value>
                <value>
                    <fullName>Guinea Pig</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pig</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Reptile</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_on_Medication__c</fullName>
        <label>Animal on Medication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioural_Problems__c</fullName>
        <label>Behavioural Problems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Council_Deem_Animal_Dangerous__c</fullName>
        <label>Council Deem Animal Dangerous</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Contract_End_Date__c</fullName>
        <label>Current Contract End Date</label>
        <summarizedField>Animal_Boarding__c.Current_Contract_End_date__c</summarizedField>
        <summaryForeignKey>Animal_Boarding__c.Animal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desexed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desexed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Date_In_Care__c</fullName>
        <label>Final Date In Care</label>
        <summarizedField>Animal_Boarding__c.Final_Date_In_Care__c</summarizedField>
        <summaryForeignKey>Animal_Boarding__c.Animal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Date_In_Care__c</fullName>
        <label>First Date In Care</label>
        <summarizedField>Animal_Boarding__c.First_Date_In_Care__c</summarizedField>
        <summaryForeignKey>Animal_Boarding__c.Animal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Food_Normally_Fed__c</fullName>
        <label>Food Normally Fed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Litter_Trained__c</fullName>
        <label>House/Litter Trained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Important_Medical_Information__c</fullName>
        <label>Important Medical Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Items_with_Animals__c</fullName>
        <label>Items with Animals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microchip__c</fullName>
        <label>Microchip</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenting_Medical_Issues__c</fullName>
        <inlineHelpText>What are the presenting medical issues?</inlineHelpText>
        <label>Presenting Medical Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albury</fullName>
                </value>
                <value>
                    <fullName>Armidale</fullName>
                </value>
                <value>
                    <fullName>Blue Mountains</fullName>
                </value>
                <value>
                    <fullName>Broken Hill</fullName>
                </value>
                <value>
                    <fullName>Cat legacy</fullName>
                </value>
                <value>
                    <fullName>Central Coast</fullName>
                </value>
                <value>
                    <fullName>Cobar</fullName>
                </value>
                <value>
                    <fullName>Coffs Harbour</fullName>
                </value>
                <value>
                    <fullName>Cooma</fullName>
                </value>
                <value>
                    <fullName>Eurobodalla</fullName>
                </value>
                <value>
                    <fullName>Glen Innes</fullName>
                </value>
                <value>
                    <fullName>Gunnedah</fullName>
                </value>
                <value>
                    <fullName>Hastings Impound</fullName>
                </value>
                <value>
                    <fullName>Hunter</fullName>
                </value>
                <value>
                    <fullName>Illawarra</fullName>
                </value>
                <value>
                    <fullName>Inverell</fullName>
                </value>
                <value>
                    <fullName>Mudgee</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Petbarn Alexandria</fullName>
                </value>
                <value>
                    <fullName>Petbarn Bathurst</fullName>
                </value>
                <value>
                    <fullName>Petbarn Belrose</fullName>
                </value>
                <value>
                    <fullName>Petbarn Blacktown</fullName>
                </value>
                <value>
                    <fullName>Petbarn Brookvale</fullName>
                </value>
                <value>
                    <fullName>Petbarn Cambelltown</fullName>
                </value>
                <value>
                    <fullName>Petbarn Caringah</fullName>
                </value>
                <value>
                    <fullName>Petbarn Castle Hill</fullName>
                </value>
                <value>
                    <fullName>Petbarn Casula</fullName>
                </value>
                <value>
                    <fullName>Petbarn Chatwswood</fullName>
                </value>
                <value>
                    <fullName>Petbarn Coffs Harbour</fullName>
                </value>
                <value>
                    <fullName>Petbarn Crows Nest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_Medical_History__c</fullName>
        <label>Relevant Medical History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shelter_Location__c</fullName>
        <label>Shelter Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheltermate_Number__c</fullName>
        <label>Sheltermate Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vaccinated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vaccinated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vet_Details__c</fullName>
        <label>Vet Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vet_History_Obtained__c</fullName>
        <label>Vet History Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Animal</label>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>